--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
@@ -2,7 +2,7 @@ parameters:
     knp_bundles.updater.class: Knp\Bundle\KnpBundlesBundle\Updater\Updater
     knp_bundles.user.provider.class: Knp\Bundle\KnpBundlesBundle\Security\Core\User\UserProvider
     knp_bundles.trending_bundle_twitterer.class: Knp\Bundle\KnpBundlesBundle\Twitterer\TrendingBundleTwitterer
-    knp_bundles.trending_bundle_tweet.template: "Discover {name}, today's trending #Symfony2 bundle {url} on #KnpBundles"
+    knp_bundles.trending_bundle_twitterer.template: "Discover {name}, today's trending #Symfony2 bundle {url} on #KnpBundles"
     knp_bundles.consumer.update_bundle.class: Knp\Bundle\KnpBundlesBundle\Consumer\UpdateBundleConsumer
     knp_bundles.consumer.github_hook.class: Knp\Bundle\KnpBundlesBundle\Consumer\GithubHookConsumer
     knp_bundles.user.manager.class: Knp\Bundle\KnpBundlesBundle\Entity\UserManager
@@ -51,8 +51,9 @@ services:
         class: %knp_bundles.trending_bundle_twitterer.class%
         arguments:
             - @knp_bundles.entity_manager
-            - %knp_bundles.trending_bundle_tweet.template%
+            - %knp_bundles.trending_bundle_twitterer.template%
             - @twitter_app
+            - %knp_bundles.trending_bundle_twitterer.idle_period%
 
     knp_bundles.goutte:
         public: false
