--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/twig.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/twig.yml
@@ -4,7 +4,7 @@ services:
         tags:
             - { name: twig.extension }
 
-    twig.extension.knp.bundle_activity:
-        class: Knp\Bundle\KnpBundlesBundle\Twig\Extension\BundleActivityTwigExtension
+    twig.extension.knp.bundle_utils:
+        class: Knp\Bundle\KnpBundlesBundle\Twig\Extension\BundleUtilsExtension
         tags:
             - { name: twig.extension }
