Remove hardcoded cURL from Travis service caller, added an Buzz dependency there instead Added missing exception for badges generation Cleaned some code, added additional docblocks to for easier maintaining

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
@@ -67,6 +67,7 @@ services:
         class: %knp_bundles.travis.class%
         arguments:
             - @knp_bundles.output
+            - @buzz
 
     knp_bundles.github_client:
         public: false
