Minimum score threshold for trends Extend tests

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -10,6 +10,7 @@ parameters:
 
     knp_bundles.trending_bundle_twitterer.idle_period: 30 #days
     knp_bundles.trending_bundle.min_score_diff: 3
+    knp_bundles.trending_bundle.min_score_threshold: 25
 
     knp_bundles.github.client_id: your_client_id_here
     knp_bundles.github.client_secret: your_client_secret_here
