Fixed paths for security, updated code to use new GH API, fixed BDD features, adjusted some CS.

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/security.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/security.yml
@@ -16,7 +16,8 @@ security:
 
     access_control:
         - { path: ^/add, roles: ROLE_USER }
-        - { path: ^/change-usage-status$, roles: ROLE_USER }
+        - { path: /change-usage-status$, roles: ROLE_USER }
+        - { path: ^/bundle/settings, roles: ROLE_USER }
 
     providers:
         knpbundles_user:
