--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,9 @@
     },
     "require": {
         "php": ">=5.3.2",
-        "symfony/symfony": "2.1.*-dev",
-        "symfony/assetic-bundle": "2.1.x-dev",
-        "symfony/monolog-bundle": "2.1.x-dev",
+        "symfony/symfony": "2.1.*",
+        "symfony/assetic-bundle": "2.1.*",
+        "symfony/monolog-bundle": "2.1.*",
         "doctrine/orm": "2.2.*",
         "doctrine/doctrine-bundle": "dev-master",
         "twig/extensions": "dev-master",
