--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
@@ -9,6 +9,7 @@ parameters:
     knp_bundles.output.class: Symfony\Component\Console\Output\NullOutput
     knp_bundles.travis.class: Knp\Bundle\KnpBundlesBundle\Travis\Travis
     knp_bundles.github.client.class: Github\Client
+    knp_bundles.github.http_client.class: Github\HttpClient\HttpClient
     knp_bundles.github.users.class: Knp\Bundle\KnpBundlesBundle\Github\User
     knp_bundles.git_repository_manager.class: Knp\Bundle\KnpBundlesBundle\Git\RepoManager
     knp_bundles.github.repository_api.class: Knp\Bundle\KnpBundlesBundle\Github\Repo
@@ -72,6 +73,10 @@ services:
     knp_bundles.github_client:
         public: false
         class: %knp_bundles.github.client.class%
+
+    knp_bundles.github_http_client:
+        public: false
+        class: %knp_bundles.github.http_client.class%
 
     knp_bundles.git_repository_manager:
         class: %knp_bundles.git_repository_manager.class%
