--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "doctrine/orm": "2.2.*",
         "doctrine/doctrine-bundle": "dev-master",
         "twig/extensions": "dev-master",
-        "sensio/distribution-bundle": "dev-master",
+        "sensio/distribution-bundle": "2.1.*",
         "doctrine/doctrine-fixtures-bundle": "dev-master",
         "doctrine/doctrine-migrations-bundle": "dev-master",
         "stof/doctrine-extensions-bundle": "dev-master",
