Fix weird problem with behat including autoloader twice. See https://github.com/Behat/Symfony2Extension/issues/13

--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -8,6 +8,7 @@ default:
     Behat\Symfony2Extension\Extension:
       mink_driver: true
       kernel:
+        bootstrap: ""
         env: test
         debug: true
     Behat\MinkExtension\Extension:
