Fix for too long strings breaking lines in design

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/twig.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/twig.yml
@@ -8,3 +8,8 @@ services:
         class: Knp\Bundle\KnpBundlesBundle\Twig\Extension\BundleUtilsExtension
         tags:
             - { name: twig.extension }
+
+    twig.extension.txt:
+        class: Twig_Extensions_Extension_Text
+        tags:
+            - { name: twig.extension }
