improve css and js with assetic
remove unused use statement
configure combining assets for css with yuicompressor
address comments, fix typos, and prepare for js compressing
enable js compressing + combining
set placeholder for yuicompressor-2.4.7.jar
add script to setup yuicompressor
add cssrewrite filter
address stoff'n and now checking on version/usage for hljs due to errors in js
fix js problem --- now hljs working 100%
address stof'n consistency concern
add asset versioning

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 /app/phpunit.xml
 /web/bundles/*
 /web/sitemap.xml*
+/web/css/*
+/web/js/*
 /app/DoctrineMigrations/*
 /src/Knp/Bundle/KnpBundlesBundle/DoctrineMigrations/*
 /src/Knp/Bundle/KnpBundlesBundle/Resources/solr/data/*
@@ -19,8 +21,10 @@
 composer.phar
 bin/*
 !bin/update-all-bundles.sh
+!bin/setup-*.sh
 !bin/launch-rabit-consumers.sh
 !bin/prepare-*.sh
 !bin/behat-*.sh
 build
 behat.yml
+app/Resources/java/*
