--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -15,3 +15,6 @@ monolog:
             type:  stream
             path:  %kernel.logs_dir%/%kernel.environment%.log
             level: debug
+
+assetic:
+    use_controller: true
