add sundown enabled knp-markdown configuration support :)
add sundown parser replacement
add config for sundown parser and add service and parameter definitions for sundown parser
add SundownParser class
add sundown install instructions for .travis.yml
fix script to install properly sundown and enabling extension on php.ini
add comment for installing in local box
add missing classes and fixing markdown sundown configuration
wire up dummy classes
add dummy method render to Markdown class
remove unneeded classes and use extension classes
update readme markup for github flavored
markdown tick-tick-tick-x-tick-tick-tick does not work but tick-x-tick does work
remove unneeded docblock
add modify formatting in fixtures for readme markdown
add some more tests within the readme
quicker thank stof i found out about the sundown-beta
wip
set back the flags and extensions
fix configuration settings for sundown parser
adapted configuration for new markdown PR update to support sundown through extension
some commit after messing up composer.lock
move up the sundown extension installation to avoid exception on composer tasks
rearrange travis php versions for sundown script
attempt PHP
add VERSION
build version into a command line
another change test
basic
yet another
trying travis_php_version
point markdown-bundle to 1.1.*
update only markdown-bundle updates everything
update to 1.2.* on markdown
remove old flavored markdown filter extension and service definition
move markdown-bundle back to 1.1.* as per stof comment
last update of composer.lock

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -21,8 +21,19 @@ twig:
     strict_variables: %kernel.debug%
 
 # Markdown Configuration
-knp_markdown:
-    parser: ~       # Enable the parser service
+knp_markdown: #~
+    parser:       # Enable the parser service
+        service: markdown.parser.sundown
+    sundown:
+        extensions:
+            fenced_code_blocks: true
+            no_intra_emphasis: true
+            autolink: true
+            strikethrough: true
+            tables: true
+        render_flags:
+            filter_html: true
+            hard_wrap: true
 
 # Time Configuration
 knp_time: ~     # Enable the time helper
