--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ php:
   - 5.4
 
 before_script:
+    - ./bin/prepare-test-sundown-"$TRAVIS_PHP_VERSION".sh
     - cp app/config/parameters.yml.test app/config/parameters.yml
     - curl -s http://getcomposer.org/installer | php -- --quiet
     - php composer.phar install --dev
