refactor faq with more info
Add missing bundles icon reference
add controller action for faq on scoring
add text for faq and include link from about scoring to faq scoring pages
updated according to jozef's comments
add proposal for centralized scoring details
address comments
add note for the future removal of route scoring kept for SEO purposes only
fix faq-score page static page feature
add usage for frameworkbundle redirect for about/scoring route

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/routing/static.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/routing/static.yml
@@ -1,6 +1,15 @@
+# @todo start deprecated route --> kept for seo but remove this route after some time
 scoring:
-    pattern:        /about/scoring
-    defaults:       { _controller: KnpBundlesBundle:Main:aboutScoring }
+    pattern: /about/scoring
+    defaults:
+        _controller: FrameworkBundle:Redirect:redirect
+        route: faq_scoring
+        permanent: true
+# @todo end deprecated route --> kept for seo but remove this route after some time
+
+faq_scoring:
+    pattern:        /about/faq-scoring
+    defaults:       { _controller: KnpBundlesBundle:Main:faqScoring }
     requirements:   { _method: "GET" }
 
 api:
