[WIP] show bundle badge preview box

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/twig.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/twig.yml
@@ -1,6 +1,8 @@
 services:
     twig.extension.knp.bundle_utils:
         class: Knp\Bundle\KnpBundlesBundle\Twig\Extension\BundleUtilsExtension
+        arguments:
+            - "@service_container"
         tags:
             - { name: twig.extension }
 
