Capifony init by @cordoval

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@
 /vendor/*
 /app/config/parameters.yml
 /app/config/parameters.*.yml
+/app/config/deploy/*
+!/app/config/deploy/prod.rb.dist
+!/app/config/deploy/staging.rb.dist
 composer.phar
 bin/*
 !bin/update-all-bundles.sh
