--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
@@ -145,6 +145,7 @@ services:
         public: false
 
     knp_bundles.badge_generator:
+        scope: request
         class: %knp_bundles.badge_generator.class%
         arguments:
             - @knp_bundles.imagine
