--- a/app/config/deploy/staging.rb.dist
+++ b/app/config/deploy/staging.rb.dist
@@ -1,6 +1,7 @@
 server 'KnpBundles.com', :app, :web, :db, :primary => true
-set :domain,      "KnpBundles.com"
-set :deploy_to,   "/home/knpbundles/sites/KnpBundles-staging/site"
-set :branch, "master"
-set :user, "user"
-set :password, "password"
+
+set :domain,      "stage.knpbundles.local"
+set :deploy_to,   "/path/to/knpbundles/staging"
+set :user,        "staging-user"
+set :branch,      "develop"
+set :port,        26
