--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -18,3 +18,10 @@ monolog:
 
 assetic:
     use_controller: true
+
+services:
+    twig.extension.debug:
+        class: Twig_Extensions_Extension_Debug
+        tags:
+            - { name: twig.extension }
+        public: false
