Move twig debug extension to the twig.yml ext config - use latest twig debug extension instead of old one

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/twig.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/twig.yml
@@ -8,3 +8,9 @@ services:
         class: Twig_Extensions_Extension_Text
         tags:
             - { name: twig.extension }
+
+    twig.extension.debug:
+        class: Twig_Extension_Debug
+        tags:
+            - { name: twig.extension }
+        public: false
