--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "symfony/monolog-bundle": "2.1.*",
         "symfony/swiftmailer-bundle": "2.1.*",
         "doctrine/orm": "2.2.*",
-        "doctrine/doctrine-bundle": "dev-master",
+        "doctrine/doctrine-bundle": "1.1.*",
         "twig/extensions": "dev-master",
         "sensio/distribution-bundle": "2.1.*",
         "doctrine/doctrine-fixtures-bundle": "dev-master",
